Fix the update % text overflow on the main button

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -681,6 +681,7 @@
 .mod-btn .small-btn-text {
     font-size: 10px;
     line-height: 1.1;
+	display: block;
 }
 
 .btn-green { /* Settings that create the Play button */
